# sale_yourself

./: CMakeLists.txt  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle  test.c
app/src/androidTest/java/com/example/soundkeyboard/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Android.mk  mainactivity.c  vad_jni.c
app/src/main/java/Catalano/Math/: Constants.java  Matrix.java  Tools.java
app/src/main/java/ML/: HMM_VQ_Speech_Recognition.java  Operations.java
app/src/main/java/ML/Alternative/jdk/: JDK13Services.java  JSSecurityManager.java  MidiUtils.java  Printer.java
app/src/main/java/ML/Alternative/sample/: AudioFileFormat.java  AudioFormat.java  AudioInputStream.java  AudioPermission.java  AudioSystem.java  Clip.java  Control.java  DataLine.java  Line.java  LineEvent.java  (+7 more)
app/src/main/java/ML/audio/: FeatureExtract.java  FormatControlConf.java  JSoundCapture.java  PreProcess.java  WaveData.java
app/src/main/java/ML/db/: DataBase.java  Model.java  ObjectIO.java  ObjectIODataBase.java  TrainingTestingWaveFiles.java
app/src/main/java/ML/util/: ArrayWriter.java  ErrorManager.java  MessageType.java  Utils.java
app/src/main/java/jfftpack/: Complex1D.java  ComplexDoubleFFT.java  ComplexDoubleFFT_Mixed.java  RealDoubleFFT.java  RealDoubleFFT_Even.java  RealDoubleFFT_Even_Odd.java  RealDoubleFFT_Mixed.java  RealDoubleFFT_Odd.java  RealDoubleFFT_Odd_Odd.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
(+50 files in other folders)
